tests/tooling/fixtures/native/recovery/negative/neg_typed_bool_return_from_i32_call.objc3
// Negative fixture: typed bool return rejects i32 function call result.
// Expected diagnostic code(s): O3S211.
module NegativeTypedBoolReturnFromI32Call;

fn raw_value() -> i32 {
  return 2;
}

fn as_bool() -> bool {
  return raw_value();
}

fn main() -> i32 {
  return 0;
}
